--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,11 @@
     "mongoose": "^8.19.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
-    "@types/bcryptjs": "^2.4.6",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
