--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,23 @@
+// {
+//   "compilerOptions": {
+//     "target": "ES2020",
+//     "module": "CommonJS",
+//     "rootDir": "src",
+//     "outDir": "dist",
+//     "strict": true,
+//     "esModuleInterop": true
+//   },
+//   "include": ["src"]
+// }
+
+
 {
   "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "src",
     "target": "ES2020",
     "module": "CommonJS",
-    "rootDir": "src",
-    "outDir": "dist",
-    "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
