--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,14 +10,17 @@
 //   "include": ["src"]
 // }
 
-
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
     "target": "ES2020",
     "module": "CommonJS",
-    "esModuleInterop": true
+    "rootDir": "src",
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]   // ✅ This line is important
   },
   "include": ["src/**/*"]
 }
